gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test15368.d
version https://git-lfs.github.com/spec/v1
oid sha256:ea5f7dddd1f9a99bfc551d0e2d54d051a1e63e4cb9b542e138b16c89e9ef8449
size 318
